# catkin_ws

./: .bashrc  Cuaderno de Bitacora.txt  README.md  do.sh
devel/: .catkin  local_setup.sh
devel/include/amcl/: AMCLConfig.h
devel/include/base_local_planner/: BaseLocalPlannerConfig.h
devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelPluginConfig.h
devel/include/global_planner/: GlobalPlannerConfig.h
devel/include/hector_elevation_msgs/: ElevationGrid.h  (+1 more)
images/playground/: output_4.txt  outputimage.txt
maps/: A_THISMAP_ETSII_MAP_071220_00:35:11.yaml  ETSII_MAP_061220_23:35:32.yaml  ETSII_MAP_061220_23:48:15.yaml  ETSII_MAP_071220_00:00:26.yaml  ETSII_MAP_071220_00:04:41.yaml  ETSII_MAP_071220_00:11:25.yaml  ETSII_MAP_071220_00:16:45.yaml  ETSII_MAP_071220_00:19:27.yaml  ETSII_MAP_071220_00:27:40.yaml  ETSII_MAP_071220_01:01:36.yaml  ETSII_MAP_241120_18:49:12.yaml  ETSII_MAP_241120_18:55:21.yaml  ETSII_MAP_241120_18:55:36.yaml  ETSII_MAP_241120_19:49:43.yaml  ETSII_MAP_261120_18:35:20.yaml  README.md
robot_config/: base_local_planner_params.yaml  costmap_common_params.yaml  move_base.launch
src/ejemplo_marker/: CMakeLists.txt  package.xml
src/ejemplolaser/: CMakeLists.txt  package.xml
src/ejemplolaser/src/: ejemplolaser_node.cpp
src/ejerciciogrid/: CMakeLists.txt  package.xml
src/envpurepursuit/: CMakeLists.txt  package.xml
src/envpurepursuit/src/: envpurepursuit_node.cpp
src/tf_transformacion/: CMakeLists.txt  package.xml
src/tf_transformacion/src/: tf_listener_lms100_to_baselink_node.cpp  tf_map_node.cpp  tf_transformacion_node.cpp
(+300 files in other folders)
